--- a/Q2.1.md
+++ b/Q2.1.md
@@ -2,15 +2,16 @@
  
  ### Memory Allocation
  
- * **Arrays:** Elements are stored in contiguous memory locations. [cite: 14]
- * **Linked Lists:** Elements are stored in non-contiguous memory locations using dynamic memory allocation. [cite: 14]
+ * **Arrays:** Elements are stored in contiguous memory locations. 
+ * **Linked Lists:** Elements are stored in non-contiguous memory locations using dynamic memory allocation. 
  
  ### Performance
  
- * **Arrays:** Provide faster access to elements by index (O(1)). [cite: 15]
- * **Linked Lists:** Accessing elements requires traversal, resulting in O(n) access time. [cite: 15]
+ * **Arrays:** Provide faster access to elements by index (O(1)). 
+ * **Linked Lists:** Accessing elements requires traversal, resulting in O(n) access time. 
  
  ### Insertion
  
- * **Arrays:** Insertion in the middle is time-consuming (O(n)). [cite: 16]
- * **Linked Lists:** Insertion at the front is fast (O(1)) if the node pointer is available. [cite: 16]
+ * **Arrays:** Insertion in the middle is time-consuming (O(n)). 
+ * **Linked Lists:** Insertion at the front is fast (O(1)) if the node pointer is available.
+   
